# sqlite-store

./: .env  .gitignore  Cargo.toml
migrations/2018-01-25-204047_create_artists/: up.sql
migrations/2018-01-25-204053_create_albums/: up.sql
migrations/2018-01-25-204056_create_tracks/: up.sql
src/: lib.rs  schema.rs
src/entities/: album.rs  artist.rs  mod.rs  provider.rs  track.rs
